--- a/casestudy/build.gradle
+++ b/casestudy/build.gradle
@@ -1,38 +1,43 @@
 plugins {
-    id 'java'
-    id 'war'
+	id 'java'
+	id 'war'
 }
 
 group 'com.example'
 version '1.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
 
 ext {
-    junitVersion = '5.10.2'
+	junitVersion = '5.10.2'
 }
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+	options.encoding = 'UTF-8'
+}
+
+java {
+	sourceCompatibility = JavaVersion.VERSION_11
+	targetCompatibility = JavaVersion.VERSION_11
 }
 
 dependencies {
-    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+	compileOnly('javax.servlet:javax.servlet-api:4.0.1')
 
-    // https://mvnrepository.com/artifact/javax.servlet/jstl
-    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
+	// https://mvnrepository.com/artifact/javax.servlet/jstl
+	implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
 // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+	testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
 
 test {
-    useJUnitPlatform()
+	useJUnitPlatform()
 }
