--- a/casestudy/src/main/webapp/WEB-INF/web.xml
+++ b/casestudy/src/main/webapp/WEB-INF/web.xml
@@ -16,4 +16,12 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<servlet>
+		<servlet-name>BookServlet</servlet-name>
+		<servlet-class>com.example.casestudy.servlet.BookServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BookServlet</servlet-name>
+		<url-pattern>/books</url-pattern>
+	</servlet-mapping>
 </web-app>
